fixed tailwind not showing issue - due to overwritten by custom variable

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+	font-family: 'Jersey 10';
+	src: url('/static/assets/fonts/Jersey10-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Jersey 15';
+	src: url('/static/assets/fonts/Jersey15-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Pixelify Sans';
+	src: url('/static/assets/fonts/PixelifySans-VariableFont_wght.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
